careers intro fixed

--- a/scss/_careers/_intro_careers.scss
+++ b/scss/_careers/_intro_careers.scss
@@ -2,7 +2,7 @@
   &__container {
     padding-top: 72px;
     padding-bottom: 72px;
-    background-image: url(../../img/careers_intro.png);
+    background-image: url(.././img/careers_intro.png);
     background-repeat: no-repeat;
     background-position: center;
   }
