--- a/css/styles.css
+++ b/css/styles.css
@@ -1962,7 +1962,7 @@ a {
 .intro__careers__container {
   padding-top: 72px;
   padding-bottom: 72px;
-  background-image: url(../../img/careers_intro.png);
+  background-image: url(.././img/careers_intro.png);
   background-repeat: no-repeat;
   background-position: center;
 }
