--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,3 +7,4 @@
 @import "../scss/_bloks/all_bloks";
 @import "_about/about_bloks";
 @import "_careers/careers_bloks";
+@import "_locations/locations_bloks";
