--- a/css/styles.css
+++ b/css/styles.css
@@ -2140,4 +2140,5 @@ a {
   line-height: 25px;
   text-align: center;
   color: #ffffff;
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
