--- a/scss/_bloks/_benefist.scss
+++ b/scss/_bloks/_benefist.scss
@@ -34,12 +34,13 @@
     text-align: center;
     color: #ffffff;
     background-color: #fcb72b;
-    border: none;
+    border: 3px solid $yellow;
     cursor: pointer;
     transition: all 0.3s ease;
   }
   &__btn:hover {
-    box-shadow: 0 0 5px 0 $yellow;
+    background-color: transparent;
+    color: $yellow;
   }
   &__box--two {
     display: flex;
