--- a/scss/_bloks/_footer.scss
+++ b/scss/_bloks/_footer.scss
@@ -25,10 +25,10 @@
   &__link {
     width: 24px;
     height: 24px;
-    transition: all 0.3s ease;
+    // transition: all 0.3s ease;
   }
-  &__link:hover {
-    opacity: 0.7;
+  &__link:hover svg {
+    fill: #e5ecf4;
   }
   &__box--link {
     font-weight: 700;
@@ -38,7 +38,7 @@
     transition: all 0.3s ease;
   }
   &__box--link:hover {
-    color: #000;
+    color: $yellow;
   }
   &__list {
     @include reset-list;
@@ -56,6 +56,7 @@
     width: 24px;
     height: 24px;
     fill: $yellow;
+    transition: all 0.3s ease;
   }
 }
 @media only screen and (max-width: 1024px) {
