--- a/scss/_bloks/_header.scss
+++ b/scss/_bloks/_header.scss
@@ -26,7 +26,7 @@
     transition: all 0.3s ease;
   }
   &__link:hover {
-    color: #000;
+    color: $yellow;
   }
   &__btn {
     padding: 14px 39px;
@@ -35,13 +35,14 @@
     line-height: 25px;
     text-align: center;
     color: #ffffff;
-    border: none;
+    border: 3px solid $yellow;
     background-color: $yellow;
     cursor: pointer;
     transition: all 0.3s ease;
   }
   &__btn:hover {
-    box-shadow: 0 0 5px 0 $yellow;
+    background-color: transparent;
+    color: $yellow;
   }
   &__logo:hover {
     transition: all 0.3 ease;
