--- a/scss/_locations/_location.scss
+++ b/scss/_locations/_location.scss
@@ -6,6 +6,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 120px;
+    margin-top: 120px;
   }
   &__box {
     margin: 0;
@@ -39,12 +40,205 @@
     margin-left: auto;
     padding: 14px 44px;
     background-color: $yellow;
-    border: none;
+    border: 3px solid $yellow;
     font-weight: 700;
     font-size: 15px;
     line-height: 25px;
     text-align: center;
     color: #ffffff;
     cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  &__btn:hover {
+    background-color: transparent;
+    color: $yellow;
+  }
+  &__maps__group {
+    margin: 0;
+    padding: 0;
+    display: none;
+  }
+  &__nav {
+    width: 111px;
+    text-align: center;
+    padding: 22px 100px;
+    background-color: rgba(252, 183, 43, 0.15);
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: -1.07143px;
+    color: #495567;
+  }
+}
+@media only screen and (max-width: 1350px) {
+  .location {
+    &__container {
+      padding-left: 100px;
+      padding-right: 100px;
+    }
+  }
+}
+@media only screen and (max-width: 1300px) {
+  .location {
+    &__maps {
+      width: 900px;
+    }
+  }
+}
+@media only screen and (max-width: 1250px) {
+  .location {
+    &__container {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
+  }
+}
+@media only screen and (max-width: 1150px) {
+  .location {
+    &__text {
+      width: 400px;
+    }
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .location {
+    &__title {
+      width: 320px;
+    }
+    &__text {
+      margin-left: 15px;
+    }
+  }
+}
+@media only screen and (max-width: 1050px) {
+  .location {
+    &__box {
+      flex-direction: column;
+    }
+    &__btn {
+      margin-right: auto;
+    }
+    &__title {
+      width: 500px;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    &__text {
+      width: 600px;
+      text-align: center;
+      margin: 0;
+      margin-bottom: 40px;
+    }
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .location {
+    &__maps {
+      width: 800px;
+    }
+  }
+}
+@media only screen and (max-width: 920px) {
+  .location {
+    &__maps {
+      width: 700px;
+      height: 500px;
+    }
+  }
+}
+@media only screen and (max-width: 800px) {
+  .location {
+    &__container {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+    &__maps {
+      width: 689px;
+      height: 337px;
+    }
+  }
+}
+@media only screen and (max-width: 750px) {
+  .location {
+    &__maps {
+      width: 600px;
+      height: 337px;
+    }
+    &__title {
+      width: 457px;
+    }
+    &__text {
+      width: 573px;
+    }
+  }
+}
+@media only screen and (max-width: 670px) {
+  .location {
+    &__maps {
+      margin-top: 80px;
+      margin-bottom: 40px;
+      width: 550px;
+      height: 300px;
+    }
+    &__maps__group {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 72px;
+    }
+  }
+}
+@media only screen and (max-width: 630px) {
+  .location {
+    &__maps {
+      width: 450px;
+      height: 250px;
+    }
+    &__title {
+      width: 400px;
+    }
+    &__text {
+      width: 500px;
+    }
+  }
+}
+@media only screen and (max-width: 530px) {
+  .location {
+    &__maps {
+      width: 420px;
+      height: 250px;
+    }
+    &__title {
+      width: 311px;
+    }
+    &__text {
+      width: 311px;
+    }
+  }
+}
+@media only screen and (max-width: 490px) {
+  .location {
+    &__maps {
+      width: 350px;
+      height: 200px;
+    }
+  }
+}
+@media only screen and (max-width: 425px) {
+  .location {
+    &__maps {
+      width: 311px;
+      height: 200px;
+    }
+    &__title {
+      font-size: 32px;
+      line-height: 32px;
+    }
+    &__text {
+      font-size: 15px;
+      line-height: 25px;
+    }
   }
 }
