--- a/css/styles.css
+++ b/css/styles.css
@@ -395,11 +395,17 @@ a {
   justify-content: space-between;
 }
 .header__box {
+  width: 100%;
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
   gap: 58px;
+}
+.header__nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .header__list {
   margin: 0;
@@ -494,14 +500,41 @@ a {
   }
   .header__nav {
     display: none;
+    background-color: #333a44;
+    position: absolute;
+    top: 64px;
+    left: 0;
+    height: 100%;
+    width: 60%;
+    z-index: 12;
+  }
+  .header__list {
+    margin-top: 64px;
+    margin-left: 32px;
+    flex-direction: column;
+    gap: 24px;
+  }
+  .header__link {
+    color: #e5ecf4;
   }
   .header__btn {
-    display: none;
+    width: 192px;
+    margin-bottom: 24px;
+    margin-left: 32px;
   }
   .header__menu {
     display: block;
     width: 20px;
     height: 16px;
+  }
+  .header__open__nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .header__open__menu {
+    background-image: url(.././img/close.svg);
   }
 }
 .intro__container {
