--- a/scss/_bloks/_header.scss
+++ b/scss/_bloks/_header.scss
@@ -72,6 +72,7 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+    z-index: 15;
   }
 }
 @media only screen and (max-width: 1024px) {
@@ -116,15 +117,15 @@
     &__nav {
       display: none;
       background-color: #333a44;
-      position: absolute;
-      top: 64px;
+      position: fixed;
+      top: 0;
       left: 0;
       height: 100%;
       width: 60%;
       z-index: 12;
     }
     &__list {
-      margin-top: 64px;
+      margin-top: 128px;
       margin-left: 32px;
       flex-direction: column;
       gap: 24px;
@@ -134,7 +135,7 @@
     }
     &__btn {
       width: 192px;
-      margin-bottom: 24px;
+      margin-bottom: 48px;
       margin-left: 32px;
     }
     &__menu {
